syntax = "proto3";

option go_package = ".;proto";


service Greeter {
    // Unary RPC: 一元 RPC
    rpc SayHello(HelloRequest) returns (HelloReply) {}

    // Server-side streaming RPC: 服务端流式 RPC
    rpc SayList(HelloRequest) returns (stream HelloReply){}
    
    // Client-side streaming RPC: 客户端流式 RPC
    rpc SayRecord(stream HelloRequest) returns (HelloReply){}

    // Bidirectional streaming RPC: 双向流式 RPC
    rpc SayRoute(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}